--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-/.env
-/build
-/dist
-/node_modules
-/package-lock.json
-/TODO.md
+.husky
+.swc
+.next
+.vercel
+build
+dist
+node_modules
+package-lock.json
+TODO.md
+yarn.lock
