--- a/package.json
+++ b/package.json
@@ -3,47 +3,62 @@
   "description": "<YOUR_PROJECT_DESCRIPTION>",
   "version": "0.1.0",
   "license": "MIT",
+  "type": "module",
   "private": true,
+  "homepage": "<YOUR_PROJECT_URL>",
+  "main": "src/pages/_app.tsx",
   "author": {
     "name": "Rian Oliveira",
     "email": "riandiasdeoliveira2001@gmail.com"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "next build",
+    "commit": "cz",
+    "commitlint": "commitlint --edit",
+    "dev": "next dev",
+    "eslint": "next lint",
+    "format": "prettier --write --ignore-unknown .",
+    "lint": "npm run format & npm run stylelint & npm run eslint",
+    "prebuild": "npm run lint",
+    "prepare": "husky install",
+    "start": "next start",
+    "stylelint": "stylelint **/*.scss"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "next": "12.2.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@types/node": "^18.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.25",
-    "@vitejs/plugin-react": "^1.3.0",
-    "gh-pages": "^4.0.0",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.18.0",
+    "husky": "^8.0.1",
+    "postcss-scss": "^4.0.4",
+    "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
+    "sass": "^1.53.0",
+    "stylelint": "^14.9.1",
+    "typescript": "^4.6.3"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/riandeoliveira/7-days-of-code.git"
   },
-  "keywords": [
-    "html",
-    "css",
-    "javascript",
-    "vite",
-    "styled-components",
-    "react",
-    "typescript"
-  ]
+  "keywords": [],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
