--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,8 @@
     "noImplicitThis": true,
     "noPropertyAccessFromIndexSignature": false,
     "noResolve": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "preserveValueImports": true,
     "pretty": true,
     "removeComments": true,
