--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/sass": "^1.43.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.18.0",
+    "eslint-config-next": "^12.2.2",
     "husky": "^8.0.1",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
